--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ JWT_SECRET_KEY=your-secret-key-here-change-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# CSRF Protection
+CSRF_SECRET=change-this-in-production-min-32-chars
+
 # Telemetry
 TELEMETRY_BACKEND=cloudlogging
 GCP_PROJECT_ID=selflytics-infra
