--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -124,7 +124,7 @@ python_classes = "Test*"
 python_functions = "test_*"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
-addopts = "-v -p no:logfire"
+addopts = "-v -p no:logfire --ignore=tests/e2e_playwright --ignore=tests/e2e"
 timeout = 30
 timeout_method = "thread"
 markers = [
