--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,8 +11,8 @@ JWT_SECRET_KEY=your-secret-key-here-change-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# CSRF Protection
-CSRF_SECRET=change-this-in-production-min-32-chars
+# CSRF Protection (min 32 chars, 64+ recommended for production)
+CSRF_SECRET=change-this-secret-to-a-random-64-character-string-for-production-security
 
 # Telemetry
 TELEMETRY_BACKEND=cloudlogging
